# pdf-struct-chunker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
fixtures/: example_profile.json
src/: chunking.rs  lib.rs  main.rs  models.rs  sentences.rs
tests/: integration.rs
